[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://sample.png" type="Texture" id=2]
[ext_resource path="res://PNG/Letters/letterA.png" type="Texture" id=3]
[ext_resource path="res://PNG/Letters/letterM.png" type="Texture" id=4]
[ext_resource path="res://PNG/Letters/letterZ.png" type="Texture" id=5]
[ext_resource path="res://PNG/Letters/letterI.png" type="Texture" id=6]
[ext_resource path="res://PNG/Letters/letterN.png" type="Texture" id=7]
[ext_resource path="res://PNG/Letters/letterG.png" type="Texture" id=8]
[ext_resource path="res://PNG/Letters/letterT.png" type="Texture" id=9]
[ext_resource path="res://PNG/Letters/letterP.png" type="Texture" id=10]
[ext_resource path="res://PNG/Letters/letterY.png" type="Texture" id=11]
[ext_resource path="res://PNG/Letters/letterL.png" type="Texture" id=12]
[ext_resource path="res://PNG/Letters/letterE.png" type="Texture" id=13]
[ext_resource path="res://Font/kenvector_future.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 14 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.854902, 0.972549, 1, 1 )
position = Vector2( -20, -20 )
scale = Vector2( 1.11668, 1.10729 )

[node name="sample" type="Sprite" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( 376.115, 234.808 )
texture = ExtResource( 2 )

[node name="Title" type="Node2D" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Title"]
position = Vector2( 50, 60 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Title"]
position = Vector2( 130, 60 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Title"]
position = Vector2( 210, 60 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Title"]
position = Vector2( 280, 60 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="Title"]
position = Vector2( 341, 60 )
texture = ExtResource( 6 )

[node name="Sprite6" type="Sprite" parent="Title"]
position = Vector2( 400, 60 )
texture = ExtResource( 7 )

[node name="Sprite7" type="Sprite" parent="Title"]
position = Vector2( 470, 60 )
texture = ExtResource( 8 )

[node name="Sprite8" type="Sprite" parent="Title"]
modulate = Color( 0.94902, 0.129412, 0.129412, 1 )
position = Vector2( 210, 140 )
texture = ExtResource( 9 )

[node name="Sprite9" type="Sprite" parent="Title"]
modulate = Color( 0.94902, 0.129412, 0.129412, 1 )
position = Vector2( 280, 140 )
texture = ExtResource( 3 )

[node name="Sprite10" type="Sprite" parent="Title"]
modulate = Color( 0.94902, 0.129412, 0.129412, 1 )
position = Vector2( 352, 140 )
texture = ExtResource( 10 )

[node name="Sprite11" type="Sprite" parent="Title"]
modulate = Color( 0.94902, 0.129412, 0.129412, 1 )
position = Vector2( 420, 140 )
texture = ExtResource( 10 )

[node name="Sprite12" type="Sprite" parent="Title"]
modulate = Color( 0.94902, 0.129412, 0.129412, 1 )
position = Vector2( 490, 140 )
texture = ExtResource( 11 )

[node name="Sprite13" type="Sprite" parent="Title"]
modulate = Color( 0.909804, 0.631373, 0.631373, 1 )
position = Vector2( 50, 316.25 )
scale = Vector2( 1, 2.34615 )
texture = ExtResource( 10 )

[node name="Sprite14" type="Sprite" parent="Title"]
modulate = Color( 0.909804, 0.631373, 0.631373, 1 )
position = Vector2( 110, 363.75 )
scale = Vector2( 1, 2.34615 )
texture = ExtResource( 12 )

[node name="Sprite15" type="Sprite" parent="Title"]
modulate = Color( 0.909804, 0.631373, 0.631373, 1 )
position = Vector2( 160, 323.75 )
scale = Vector2( 1, 2.34615 )
texture = ExtResource( 3 )

[node name="Sprite16" type="Sprite" parent="Title"]
modulate = Color( 0.909804, 0.631373, 0.631373, 1 )
position = Vector2( 230, 403.75 )
scale = Vector2( 1, 2.34615 )
texture = ExtResource( 7 )

[node name="Sprite17" type="Sprite" parent="Title"]
modulate = Color( 0.909804, 0.631373, 0.631373, 1 )
position = Vector2( 300, 328.673 )
scale = Vector2( 1, 2.34615 )
texture = ExtResource( 13 )

[node name="Options" type="Node2D" parent="."]

[node name="Selection" type="Button" parent="Options"]
margin_left = 580.0
margin_top = 290.0
margin_right = 780.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 1 )
text = "SELECT"

[node name="Play" type="Button" parent="Options"]
margin_left = 580.0
margin_top = 370.0
margin_right = 780.0
margin_bottom = 420.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"
[connection signal="mouse_entered" from="Options/Selection" to="." method="_on_Selection_mouse_entered"]
[connection signal="pressed" from="Options/Selection" to="." method="_on_Selection_pressed"]
[connection signal="mouse_entered" from="Options/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="Options/Play" to="." method="_on_Play_pressed"]
